<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".VerifyPhoneActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@color/white"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <TextView
        android:id="@+id/input_code_instructions_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/type_the_code_received_via_sms"
        android:layout_marginTop="@dimen/dimen_24"
        android:layout_marginRight="@dimen/dimen_16"
        android:layout_marginLeft="@dimen/dimen_16"/>

    <EditText
        android:id="@+id/input_code_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/enter_code"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="@dimen/dimen_16"
        android:padding="@dimen/dimen_8"
        android:textAlignment="center"
        android:maxLength="4"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/verify_input_code_button"
        android:layout_width="@dimen/dimen_84"
        android:layout_height="@dimen/dimen_36"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:text="@string/next"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_36"
        />

</LinearLayout>



