<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/first_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:background="@drawable/edit_text_background"
        android:inputType="text">
    </EditText>

    <EditText
        android:id="@+id/last_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:background="@drawable/edit_text_background"
        android:inputType="text">
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/course_name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/course_year_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:background="@drawable/edit_text_background"
            android:inputType="number">
        </EditText>

    </LinearLayout>

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:background="@drawable/edit_text_background"
        android:inputType="textPassword">
    </EditText>

    <EditText
        android:id="@+id/password_confirmation_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:background="@drawable/edit_text_background"
        android:inputType="textPassword">
    </EditText>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:text="@string/next"
        />


</LinearLayout>
